[package]
name = "imgcatr"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Cat for images"
readme = "README.md"
authors = ["Silin <silinmeng@gmail.com>"]
repository = "https://github.com/SilinMeng0510/imgcatr"
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "0.3"
image = "0.24"
clap = { version = "4.4.11", features = ["cargo", "string"]}

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["winbase", "wincon"]


[[bin]]
name = "imgcatr"
test = false
doc = false